# OCCI-Object-Programming

./: .gitignore  Makefile.am  README  configure.ac  demo2.cpp  demo2.h  demo2.sql  demo2.typ  main.cpp  mappings.cpp  mappings.h  myDemo.cpp  myDemo.h  schema.sql
m4/: ax_lib_oracle_occi.m4
